--- a/app_gestock/templates/base.html
+++ b/app_gestock/templates/base.html
@@ -1,10 +1,12 @@
 {% load static %}
+{% load tailwind_tags %}
 {% comment %} Base HTML file used as a base for any HTML page {% endcomment %}
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
 		<title>gestock</title>
+		{% tailwind_css %}
 		<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 		<link
 		rel="icon"
