Added Overview & Borrowings view, Model, Menus, ...
+ Overview table view
+ Borrowings table view
+ Menu sidebar changes with the database
+ Modified subtitle to be overridden per page
+ Added urls
+ Added Datatables.net table view to the project
+ Added Json response to allow the use of the Datatables.net's tables with my data
+ Added model following the MCD/MLD
+ Added dummy data to the DB
+Added colors to the table views to be more readable
+ Changed font to "Inter"

--- a/app_gestock/templates/base.html
+++ b/app_gestock/templates/base.html
@@ -2,21 +2,71 @@
 {% load tailwind_tags %}
 {% comment %} Base HTML file used as a base for any HTML page {% endcomment %}
 <!DOCTYPE html>
-<html lang="fr">
-	<head>
-		<meta charset="UTF-8" />
-		<title>gestock</title>
-		{% tailwind_css %}
-		<link rel="stylesheet" href="{% static 'css/style.css' %}" />
-		<link
-		rel="icon"
-		type="image/x-icon"
-		href="{% static 'resources/favicon.svg' %}"
-		/>
-	</head>
-<body>
-	{% comment %} Block will be replaced with content from other pages{% endcomment %}
-	{% block content %}
-	{% endblock %}
+<html lang="fr" class="h-full">
+<head>
+    <meta charset="UTF-8" />
+    <title>gestock</title>
+    {% tailwind_css %}
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" href="{% static 'css/customStyle.css' %}" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+    <link rel="icon" type="image/x-icon" href="{% static 'resources/favicon.svg' %}" />
+</head>
+<body class="h-full">
+    <div class="HEADER m-5 flex items-center justify-between flex-row">
+        <div class="flex flex-row items-center">
+            <svg class="w-20 mr-2 bg-slate-700 rounded-lg" xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 28 28" className="w-6 h-6">
+                <path fill="white" fill-rule="evenodd" d="M7.5 6a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM3.751 20.105a8.25 8.25 0 0116.498 0 .75.75 0 01-.437.695A18.683 18.683 0 0112 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 01-.437-.695z" clip-rule="evenodd" />
+            </svg>
+            {% if user.is_authenticated %}
+            <div class="hidden sm:block">
+                <p class="text-xl font-medium">{{request.user.username}}</p>
+                <p class="text-sm">Emprunts en cours : X{%block emprunts%}{%endblock%}</p>
+                <a class="bg-red-500 hover:bg-red-700 text-xs text-white font-medium py-2 px-2 rounded-lg" href="{% url 'logout' %}" href="{% url 'logout' %}">Déconnexion</a>
+            </div>
+            {% else %}
+            <a class="hidden sm:block" href="{% url 'login' %}">Connexion</a>
+            {% endif %}
+        </div>
+        <div class="flex flex-col items-center">
+            <a href="{% url 'index' %}"><h1 class="text-4xl text-center font-bold text-slate-800">Gestion du stock</h1></a>
+            <h1 class="text-xl font-bold text-slate-300">{%block title%}{%endblock%}</h1>
+        </div>
+        <h1 class="text-4xl w-fit font-extrabold text-blue-800">ETML</h1>
+    </div>
+    <div class="flex flex-col w-full md:flex-row">
+        <div class="MENU ml-5 text-slate-800">
+            <div class="mb-5">
+                <a href="{% url 'index' %}"><h2 class="text-xl font-bold">Vue d'Ensemble</h2></a>
+            </div>
+            <div class="mb-5">
+                <a href="{% url 'borrows' %}"><h2 class="text-xl font-bold">Emprunts</h2></a>
+                <div class="ml-2">
+                    <a href="{% url 'borrows' %}"><h3>Liste</h3></a>
+                </div>
+            </div>
+            <div class="mb-5">
+                <h2 class="text-xl font-bold">Materiel</h2>
+                <div class="ml-2">
+                    <h3>Liste</h3>
+					{% for item in menuTypes %}
+						<a href="{% url 'login' %}"><h3>{{item}}</h3></a>
+					{% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="CONTENT md:ml-10 p-0 md:p-10 md:pt-5 w-auto overflow-auto bg-slate-200 rounded-lg">
+            {% comment %} Block will be replaced with content from other pages{% endcomment %}
+			{% block content %}
+			{% endblock %}
+        </div>
+    </div>
+    <div class="FOOTER text-center w-full md:py-8">
+        <p>© 2023 aless - ETML</p>
+    </div>
 </body>
 </html>
