--- a/app_gestock/templates/registration/logout.html
+++ b/app_gestock/templates/registration/logout.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <p>Logged out!</p>
-  <a href="{% url 'login'%}">Click here to login again.</a>
+  <p>Déconnecté !</p>
+  <a href="{% url 'login'%}">Cliquez ici pour vous connecter à nouveau.</a>
 {% endblock %}
