--- a/app_gestock/templates/registration/login.html
+++ b/app_gestock/templates/registration/login.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-  {% if form.errors %}
+<h2 class="text-xl font-bold">Connexion</h2>
+  {% if form.errors %} {# Check if there are errors in the form #}
     <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
 
@@ -27,7 +28,7 @@
         <td>{{ form.password }}</td>
       </tr>
     </table>
-    <input type="submit" value="login">
+    <input class="bg-slate-500 hover:bg-slate-700 text-xs text-white font-medium py-2 px-2 rounded-lg float-right" type="submit" value="login">
     <input type="hidden" name="next" value="{{ next }}">
   </form>
 
